--- a/Blazm.Components/Blazm.Components/_Imports.razor
+++ b/Blazm.Components/Blazm.Components/_Imports.razor
@@ -7,3 +7,4 @@
 @using System.ComponentModel.DataAnnotations;
 @using System;
 @using System.Reflection;
+@using Microsoft.AspNetCore.Components.Web.Virtualization;
