--- a/Blazm.Components/SampleServerSide/Shared/NavMenu.razor
+++ b/Blazm.Components/SampleServerSide/Shared/NavMenu.razor
@@ -38,11 +38,11 @@
             </NavLink>
         </li>
 
-        <li class="nav-item px-3">
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="virtualize">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Virtualize
             </NavLink>
-        </li>
+        </li>*@
         <hr />
 
         <li class="nav-item px-3">
