--- a/Blazm.Components/SampleServerSide/Pages/_Host.cshtml
+++ b/Blazm.Components/SampleServerSide/Pages/_Host.cshtml
@@ -34,6 +34,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
-    @*<script src="_content/BlazorPro.BlazorSize/blazorSize.min.js"></script>*@
+    <script src="_content/BlazorPro.BlazorSize/blazorSize.min.js"></script>
 </body>
 </html>
