--- a/Blazm.Components/SampleServerSide/Pages/FetchDataNullTemplate.razor
+++ b/Blazm.Components/SampleServerSide/Pages/FetchDataNullTemplate.razor
@@ -107,6 +107,6 @@
     private BlazmGrid<WeatherForecast> GroupedGrid;
     protected override async Task OnInitializedAsync()
     {
-        forecasts = null; //await ForecastService.GetForecastAsync(DateTime.Now);
+        forecasts = null; 
     }
 }
