--- a/Blazm.Components/SampleServerSide/Pages/FetchData.razor
+++ b/Blazm.Components/SampleServerSide/Pages/FetchData.razor
@@ -49,7 +49,7 @@
             <GridColumn Field="@nameof(WeatherForecast.TemperatureC)" HighlightSign="true" Priority="1" Class="alignRight">
                 <FooterTemplate>
                     @{
-                            var temp = context as List<WeatherForecast>;
+                        var temp = context as List<WeatherForecast>;
                     }
                     @temp.Sum(t => t.TemperatureC)
                 </FooterTemplate>
@@ -58,18 +58,25 @@
                     @{ //Context contains all the WeatherForecast within the group
                         var temp = context as List<WeatherForecast>;
                     }
-                    @temp.Sum(t => t.TemperatureC)
+                    @Math.Round(temp.Average(t => t.TemperatureC),2)
                 </GroupFooterTemplate>
             </GridColumn>
             <GridColumn Field="@nameof(WeatherForecast.TemperatureF)" Priority="2" Class="alignRight">
                 <FooterTemplate>
                     @{
-                            var temp = context as List<WeatherForecast>;
+                        var temp = context as List<WeatherForecast>;
                     }
-                    @temp.Sum(t => t.TemperatureF)
+                    @Math.Round(temp.Average(t => t.TemperatureF), 2)
                 </FooterTemplate>
+                <GroupFooterTemplate>
+                    @{ 
+                        var temp = context as List<WeatherForecast>;
+                    }
+                    @Math.Round(temp.Average(t => t.TemperatureF), 2)
+                </GroupFooterTemplate>
             </GridColumn>
             <GridColumn Field="@nameof(WeatherForecast.Summary)" Priority="0" />
+            <GridColumn Field="@nameof(WeatherForecast.Location)" Priority="5" />
         </GridColumns>
     </BlazmGrid>
 
