Initial test project and examples

--- a/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
+++ b/Blazm.Components/Blazm.Components/Grid/BlazmGrid.razor
@@ -7,10 +7,8 @@
 @using Blazm.Components.Dynamic
 @using Microsoft.JSInterop
 
-
-
 <div id="@("tablecontainer" + id)">
-    <table class="table table-striped" id="@("table" + id)">
+    <table class="table-striped table" id="@("table" + id)">
         @{
             TItem firstRow = default!;
             if (Data != null)
