Prevent NullReferenceException if specified field does not exist

--- a/Blazm.Components/Blazm.Components/Grid/GridColumn.razor
+++ b/Blazm.Components/Blazm.Components/Grid/GridColumn.razor
@@ -137,7 +137,7 @@
         {
             if (Type != null && Field != null)
             {
-                var displayattribute = TypeDescriptor.GetReflectionType(this.Type).GetProperty(Field).GetCustomAttribute<DisplayAttribute>();
+                var displayattribute = TypeDescriptor.GetReflectionType(this.Type).GetProperty(Field)?.GetCustomAttribute<DisplayAttribute>();
                 if (title == null && displayattribute != null)
                 {
                     this.title = displayattribute.Name;
